Update manual code index.html

--- a/index.html
+++ b/index.html
@@ -10,13 +10,13 @@
         <div class="quiz-list">
             <button class="manual-btn" data-manual="irwm">1. Indian Railway Works Manual</button>
             <button class="manual-btn" data-manual="irpwm">2. Indian Railway P-way Manual</button>
-            <button class="manual-btn" data-manual="irsod">3. Indian Railway Schedule of Dimensions</button>
+            <button class="manual-btn" data-manual="irdim">3. Indian Railway Schedule of Dimensions</button>
             <button class="manual-btn" data-manual="irec">4. Indian Railway Engineering Code</button>
-            <button class="manual-btn" data-manual="irstm">5. Small Track Machine Manual</button>
-            <button class="manual-btn" data-manual="irusfd">6. USFD Manual</button>
-            <button class="manual-btn" data-manual="irfbw">7. FBW Manual</button>
-            <button class="manual-btn" data-manual="irstore">8. Store Manual</button>
-            <button class="manual-btn" data-manual="iraccount">9. Account Manual</button>
+            <button class="manual-btn" data-manual="stm">5. Small Track Machine Manual</button>
+            <button class="manual-btn" data-manual="usfd">6. USFD Manual</button>
+            <button class="manual-btn" data-manual="fbwm">7. FBW Manual</button>
+            <button class="manual-btn" data-manual="store">8. Store Manual</button>
+            <button class="manual-btn" data-manual="account">9. Account Manual</button>
         </div>
     </div>
     <script>
