--- a/quiz.html
+++ b/quiz.html
@@ -5,6 +5,7 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
+    <a href="index.html">Home</a>
     <div class="app">
         <h1>Quiz</h1>
         <div class="quiz">
