--- a/quiz.html
+++ b/quiz.html
@@ -5,9 +5,11 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <a href="index.html">Home</a>
     <div class="app">
-        <h1>Quiz</h1>
+        <h1>
+            Quiz
+            <a href="index.html">Home</a>
+        </h1>
         <div class="quiz">
             <h2 id="question">Question goes here</h2>
             <div id="answer-buttons"></div>
