--- a/register.html
+++ b/register.html
@@ -1,6 +1,168 @@
-<form id="registerForm">
-  <input type="email" id="email" placeholder="Email" required>
-  <input type="password" id="password" placeholder="Password" required>
-  <button type="submit">Register</button>
-</form>
-<p>Already have an account? <a href="login.html">Login here</a></p>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <title>Register</title>
+  <style>
+    body {
+      background: #fafafa;
+      font-family: Arial, sans-serif;
+      margin: 0;
+      padding: 0;
+    }
+    .container {
+      max-width: 400px;
+      margin: 40px auto;
+      background: #fff;
+      border-radius: 8px;
+      box-shadow: 0 2px 10px rgba(0,0,0,0.06);
+      padding: 32px 24px 24px 24px;
+      position: relative;
+    }
+    h2 {
+      text-align: center;
+      margin-bottom: 6px;
+      font-size: 2em;
+    }
+    .subtitle {
+      text-align: center;
+      color: #555;
+      margin-bottom: 22px;
+      font-size: 1em;
+    }
+    .social-btn {
+      width: 100%;
+      padding: 12px;
+      margin-bottom: 12px;
+      border: 1px solid #ddd;
+      border-radius: 5px;
+      background: #fff;
+      font-size: 1em;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      cursor: pointer;
+      transition: background 0.2s;
+    }
+    .social-btn img {
+      height: 20px;
+      margin-right: 10px;
+    }
+    .social-btn:hover {
+      background: #f0f0f0;
+    }
+    .divider {
+      display: flex;
+      align-items: center;
+      text-align: center;
+      margin: 18px 0 16px 0;
+    }
+    .divider::before, .divider::after {
+      content: '';
+      flex: 1;
+      border-bottom: 1px solid #ddd;
+    }
+    .divider:not(:empty)::before {
+      margin-right: .75em;
+    }
+    .divider:not(:empty)::after {
+      margin-left: .75em;
+    }
+    form {
+      display: flex;
+      flex-direction: column;
+    }
+    input[type="email"], input[type="text"], input[type="password"] {
+      padding: 12px;
+      margin-bottom: 14px;
+      border: 1px solid #ccc;
+      border-radius: 4px;
+      font-size: 1em;
+    }
+    .checkbox-row {
+      display: flex;
+      align-items: center;
+      margin-bottom: 16px;
+    }
+    .checkbox-row input[type="checkbox"] {
+      margin-right: 7px;
+    }
+    .forgot {
+      margin-left: auto;
+      font-size: 0.95em;
+      color: #f9a825;
+      text-decoration: none;
+    }
+    .forgot:hover {
+      text-decoration: underline;
+    }
+    button[type="submit"], .register-btn {
+      background: #f9a825;
+      color: #fff;
+      border: none;
+      padding: 13px 0;
+      border-radius: 4px;
+      font-size: 1.1em;
+      font-weight: bold;
+      cursor: pointer;
+      margin-top: 8px;
+      width: 100%;
+      transition: background 0.2s;
+    }
+    button[type="submit"]:hover, .register-btn:hover {
+      background: #e6a100;
+    }
+    .bottom-text {
+      text-align: center;
+      margin-top: 18px;
+      font-size: 1em;
+    }
+    .bottom-text a {
+      color: #f9a825;
+      text-decoration: none;
+      font-weight: bold;
+    }
+    .bottom-text a:hover {
+      text-decoration: underline;
+    }
+    .small-note {
+      text-align: center;
+      font-size: 0.95em;
+      margin: 8px 0 12px 0;
+      color: #222;
+    }
+    .required-note {
+      font-size: 0.85em;
+      color: #888;
+      margin-top: 6px;
+      margin-bottom: -6px;
+      text-align: right;
+    }
+  </style>
+</head>
+<body>
+  <div class="container">
+    <h2>Register</h2>
+    <div class="subtitle">By continuing you agree to our <b>Community Guidelines</b></div>
+    <button class="social-btn"><img src="https://img.icons8.com/color/48/000000/google-logo.png" alt="Google logo">CONTINUE WITH GOOGLE</button>
+    <button class="social-btn"><img src="https://img.icons8.com/ios-filled/50/000000/mac-os.png" alt="Apple logo">CONTINUE WITH APPLE</button>
+    <div class="small-note">Already have an account with Facebook? <a href="#">Go Here</a></div>
+    <div class="divider">or</div>
+    <form id="registerForm">
+      <input type="email" id="email" placeholder="Email Address*" required>
+      <input type="text" id="username" placeholder="Username*" required>
+      <input type="password" id="password" placeholder="Password*" required>
+      <div class="checkbox-row">
+        <input type="checkbox" id="staySignedIn" checked>
+        <label for="staySignedIn">Stay signed in</label>
+        <a class="forgot" href="#">Forgot Password?</a>
+      </div>
+      <div class="required-note">* indicates a required field</div>
+      <button type="submit" class="register-btn">REGISTER</button>
+    </form>
+    <div class="bottom-text">
+      Already have an account? <a href="login.html">Log In</a>
+    </div>
+  </div>
+</body>
+</html>
