--- a/register.html
+++ b/register.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>Register</title>
+  <title>Log In</title>
   <style>
     body {
       background: #fafafa;
@@ -11,7 +11,7 @@
       padding: 0;
     }
     .container {
-      max-width: 400px;
+      max-width: 420px;
       margin: 40px auto;
       background: #fff;
       border-radius: 8px;
@@ -23,44 +23,58 @@
       text-align: center;
       margin-bottom: 6px;
       font-size: 2em;
+      font-weight: bold;
     }
     .subtitle {
       text-align: center;
-      color: #555;
+      color: #333;
       margin-bottom: 22px;
-      font-size: 1em;
+      font-size: 1.1em;
+    }
+    .subtitle b {
+      font-weight: bold;
     }
     .social-btn {
       width: 100%;
       padding: 12px;
-      margin-bottom: 12px;
-      border: 1px solid #ddd;
+      margin-bottom: 18px;
+      border: 1.5px solid #222;
       border-radius: 5px;
       background: #fff;
-      font-size: 1em;
+      font-size: 1.1em;
       display: flex;
       align-items: center;
       justify-content: center;
       cursor: pointer;
       transition: background 0.2s;
+      font-weight: bold;
+      letter-spacing: 0.02em;
     }
     .social-btn img {
-      height: 20px;
-      margin-right: 10px;
+      height: 22px;
+      margin-right: 12px;
     }
     .social-btn:hover {
       background: #f0f0f0;
+    }
+    .small-note {
+      text-align: center;
+      font-size: 0.98em;
+      margin-bottom: 18px;
+      color: #222;
     }
     .divider {
       display: flex;
       align-items: center;
       text-align: center;
-      margin: 18px 0 16px 0;
+      margin: 18px 0 14px 0;
+      color: #888;
+      font-size: 1em;
     }
     .divider::before, .divider::after {
       content: '';
       flex: 1;
-      border-bottom: 1px solid #ddd;
+      border-bottom: 1.5px solid #ddd;
     }
     .divider:not(:empty)::before {
       margin-right: .75em;
@@ -72,97 +86,145 @@
       display: flex;
       flex-direction: column;
     }
+    label {
+      font-size: 1em;
+      margin-bottom: 4px;
+      font-weight: bold;
+      color: #222;
+    }
     input[type="email"], input[type="text"], input[type="password"] {
-      padding: 12px;
+      padding: 13px;
       margin-bottom: 14px;
-      border: 1px solid #ccc;
+      border: 1.5px solid #ccc;
       border-radius: 4px;
       font-size: 1em;
+      background: #f5f5f5;
     }
     .checkbox-row {
       display: flex;
       align-items: center;
-      margin-bottom: 16px;
+      margin-bottom: 12px;
+      font-size: 1em;
     }
     .checkbox-row input[type="checkbox"] {
       margin-right: 7px;
+      accent-color: #f9a825;
     }
     .forgot {
       margin-left: auto;
-      font-size: 0.95em;
-      color: #f9a825;
+      font-size: 1em;
+      color: #222;
       text-decoration: none;
+      font-weight: bold;
+      transition: color 0.2s;
     }
     .forgot:hover {
-      text-decoration: underline;
-    }
-    button[type="submit"], .register-btn {
-      background: #f9a825;
-      color: #fff;
-      border: none;
-      padding: 13px 0;
-      border-radius: 4px;
-      font-size: 1.1em;
-      font-weight: bold;
-      cursor: pointer;
-      margin-top: 8px;
-      width: 100%;
-      transition: background 0.2s;
-    }
-    button[type="submit"]:hover, .register-btn:hover {
-      background: #e6a100;
-    }
-    .bottom-text {
-      text-align: center;
-      margin-top: 18px;
-      font-size: 1em;
-    }
-    .bottom-text a {
       color: #f9a825;
-      text-decoration: none;
-      font-weight: bold;
-    }
-    .bottom-text a:hover {
       text-decoration: underline;
-    }
-    .small-note {
-      text-align: center;
-      font-size: 0.95em;
-      margin: 8px 0 12px 0;
-      color: #222;
     }
     .required-note {
-      font-size: 0.85em;
+      font-size: 0.92em;
       color: #888;
       margin-top: 6px;
       margin-bottom: -6px;
       text-align: right;
     }
+    .actions-row {
+      display: flex;
+      align-items: center;
+      justify-content: space-between;
+      margin-top: 18px;
+    }
+    .join-btn {
+      background: none;
+      border: none;
+      color: #222;
+      font-size: 1.1em;
+      font-weight: bold;
+      cursor: pointer;
+      padding: 0;
+      text-decoration: underline;
+      margin-right: 10px;
+    }
+    .login-btn {
+      background: #f9a825;
+      color: #fff;
+      border: none;
+      padding: 13px 32px;
+      border-radius: 4px;
+      font-size: 1.1em;
+      font-weight: bold;
+      cursor: pointer;
+      transition: background 0.2s;
+      margin-left: 10px;
+    }
+    .login-btn:hover {
+      background: #e6a100;
+    }
+    @media (max-width: 500px) {
+      .container {
+        max-width: 95vw;
+        padding: 14px 4vw 18px 4vw;
+      }
+    }
   </style>
+  <!-- Google Sign-In JS -->
+  <script src="https://accounts.google.com/gsi/client" async defer></script>
 </head>
 <body>
-  <div class="container">
-    <h2>Register</h2>
-    <div class="subtitle">By continuing you agree to our <b>Community Guidelines</b></div>
-    <button class="social-btn"><img src="https://img.icons8.com/color/48/000000/google-logo.png" alt="Google logo">CONTINUE WITH GOOGLE</button>
-    <button class="social-btn"><img src="https://img.icons8.com/ios-filled/50/000000/mac-os.png" alt="Apple logo">CONTINUE WITH APPLE</button>
-    <div class="small-note">Already have an account with Facebook? <a href="#">Go Here</a></div>
+  <div class="container" id="loginModal">
+    <h2>Log In</h2>
+    <div class="subtitle">
+      By continuing you agree to our <b>Community Guidelines</b>
+    </div>
+    <div id="g_id_onload"
+         data-client_id="YOUR_GOOGLE_CLIENT_ID"
+         data-callback="handleCredentialResponse"
+         data-auto_prompt="true">
+    </div>
+    <div class="g_id_signin"
+         data-type="standard"
+         data-size="large"
+         data-theme="outline"
+         data-text="sign_in_with"
+         data-shape="rectangular"
+         data-logo_alignment="left">
+    </div>
+    <div class="small-note">
+      Created your account with Facebook? <a href="#">Go Here</a>
+    </div>
     <div class="divider">or</div>
-    <form id="registerForm">
-      <input type="email" id="email" placeholder="Email Address*" required>
-      <input type="text" id="username" placeholder="Username*" required>
-      <input type="password" id="password" placeholder="Password*" required>
+    <form id="loginForm">
+      <label for="email">Email Address or Username<span style="color:#f9a825">*</span></label>
+      <input type="text" id="email" placeholder="" required>
+      <label for="password">Password<span style="color:#f9a825">*</span></label>
+      <input type="password" id="password" placeholder="" required>
       <div class="checkbox-row">
         <input type="checkbox" id="staySignedIn" checked>
-        <label for="staySignedIn">Stay signed in</label>
+        <label for="staySignedIn" style="margin:0;">Stay signed in</label>
         <a class="forgot" href="#">Forgot Password?</a>
       </div>
       <div class="required-note">* indicates a required field</div>
-      <button type="submit" class="register-btn">REGISTER</button>
+      <div class="actions-row">
+        <button type="button" class="join-btn" onclick="window.location.href='register.html'">Join Sporcle for Free</button>
+        <button type="submit" class="login-btn">LOG IN</button>
+      </div>
     </form>
-    <div class="bottom-text">
-      Already have an account? <a href="login.html">Log In</a>
-    </div>
   </div>
+  <script>
+    // Replace with your actual Google Client ID
+    // The prompt will show automatically on page load due to data-auto_prompt="true"
+    function handleCredentialResponse(response) {
+      // You get the Google token here
+      // For now, just show a message (in real app, send token to your server)
+      alert("Google login successful!\nToken: " + response.credential);
+    }
+
+    // Optional: Prevent form submit for demo
+    document.getElementById('loginForm').addEventListener('submit', function(e) {
+      e.preventDefault();
+      alert('Normal login form submitted (demo only)');
+    });
+  </script>
 </body>
 </html>
