--- a/register.html
+++ b/register.html
@@ -175,7 +175,7 @@
 
     <!-- Google Button -->
     <div id="g_id_onload"
-         data-client_id="YOUR_GOOGLE_CLIENT_ID"
+         data-client_id="765334603137-e10kbh7ifqm6fhkelapt7qjdo00vmcuh.apps.googleusercontent.com"
          data-callback="handleCredentialResponse"
          data-auto_prompt="false">
     </div>
