--- a/index.html
+++ b/index.html
@@ -1,3 +1,47 @@
+<!-- HEADER START -->
+<!-- Topbar -->
+<div class="topbar">
+  <div class="topbar-left">
+    <a href="index.html"><span class="icon-home">&#8962;</span> QUIZZES</a>
+    <a href="#">EVENTS</a>
+    <a href="#">QUIZ CREATION</a>
+    <a href="#">COMMUNITY</a>
+    <a href="#">VIDEOS</a>
+    <a href="#">PRIVATE EVENTS</a>
+  </div>
+  <div class="topbar-right">
+    <a href="#">REMOVE ADS</a>
+    <a href="login.html">SIGN IN</a>
+    <span class="avatar"></span>
+  </div>
+</div>
+<!-- Main Navigation -->
+<nav class="mainnav">
+  <button class="hamburger" id="hamburgerBtn" aria-label="Menu">&#9776;</button>
+  <div class="mainnav-logo">
+    <img src="logo.png" alt="Logo">
+    <span class="brand">IR-LDCE</span>
+  </div>
+  <div class="mainnav-links" id="mainnavLinks">
+    <a href="#">CATEGORIES</a>
+    <a href="#">QUIZ TYPES</a>
+    <a href="#">BADGES</a>
+    <a href="#">PLAYLISTS</a>
+    <a href="#">DAILY DOSE</a>
+    <a href="#">CREATE</a>
+    <a href="#">QUIZ LAB</a>
+    <a href="#">LESSONS</a>
+    <a href="#">SPORCLECON</a>
+  </div>
+  <div class="mainnav-right">
+    <button class="random-quiz-btn">RANDOM QUIZ</button>
+    <span class="search-icon">&#128269;</span>
+  </div>
+</nav>
+<!-- HEADER END -->
+
+<!-- Place the rest of your page content below this -->
+
 <!DOCTYPE html>
 <html>
 <head>
