--- a/login.html
+++ b/login.html
@@ -217,7 +217,7 @@
       <div class="required-note">* indicates a required field</div>
       
       <div class="actions-row">
-        <button type="button" class="join-btn" onclick="window.location.href='register.html'">Join Sporcle for Free</button>
+        <button type="button" class="join-btn" onclick="window.location.href='register.html'">Join IR-LDCE Community for Free</button>
         <button type="submit" class="login-btn">LOG IN</button>
       </div>
     </form>
