--- a/index.html
+++ b/index.html
@@ -179,15 +179,16 @@
       <div class="header-topbar">
         <div>
           <a href="index.html">HOME</a>
-          <a href="#">QUIZZES</a>
-          <a href="#">EVENTS</a>
-          <a href="#">QUIZ CREATION</a>
-          <a href="#">COMMUNITY</a>
-          <a href="#">VIDEOS</a>
-          <a href="#">PRIVATE EVENTS</a>
+         <div>
+          <a href="https://indianrailways.gov.in/">Railway Official Website</a>
+        </div>
+          <a href="faq.html">FAQ</a>
+          <a href="free.html">Free Tests</a>
+          <a href="Privacy.html">Privacy Policy</a>
+          <a href="contact.html">Contact Us</a>
         </div>
         <div>
-          <a href="#">REMOVE ADS</a>
+          <a href="about.html">About Us</a>
           <a href="login.html">SIGN IN</a>
         </div>
       </div>
@@ -198,19 +199,11 @@
           <span>IR-LDCE</span>
         </a>
         <nav class="header-nav" id="headerNav">
-          <a href="#">CATEGORIES</a>
-          <a href="#">QUIZ TYPES</a>
-          <a href="#">BADGES</a>
-          <a href="#">PLAYLISTS</a>
-          <a href="#">DAILY DOSE</a>
-          <a href="#">CREATE</a>
-          <a href="#">QUIZ LAB</a>
-          <a href="#">LESSONS</a>
-          <a href="#">SPORCLECON</a>
+          <a href="categories.html">CATEGORIES</a>
+          <a href="daily.html">DAILY DOSE</a>
         </nav>
         <div class="header-actions">
           <button class="header-btn">RANDOM QUIZ</button>
-          <span class="header-search">&#128269;</span>
         </div>
       </div>
     </header>
